# jsonfeed2social

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  example-config.ini  makefile  pyproject.toml
jsonfeed2social/: __main__.py  command_manager.py  config.py  exception.py  jsonfeed.py  utility.py
jsonfeed2social/social/: manager.py  mastodon.py  twitter.py
tests/: init.py  test_jsonfeed.py  test_utility.py
