[tool.poetry]
name = "jsonfeed2social"
version = "1.3.0"
description = "Tweet and toot from your jsonfeeed"
authors = ["Fundor333 <fundor333@fundor333.com>"]

homepage = "https://github.com/fundor333/jsonfeed2social"
repository = "https://github.com/fundor333/jsonfeed2social"
license = "MIT"
readme = "README.md"

keywords = ["jsonfeed", "twitter", "mastodon", "social"]

classifiers = [
    'License :: OSI Approved :: MIT License',
    "Development Status :: 4 - Beta",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.skjold]
sources = ["pyup", "gemnasium"]  # Sources to check against.
report_only = true                         # Report only, always exit with zero.
cache_dir = '.skylt_cache'                 # Cache location (default: `~/.skjold/cache`).
cache_expires = 86400                      # Cache max. age.
verbose = true                             # Be verbose.

[tool.poetry.dependencies]
python = "^3.7.2"
click = "^8.1.3"
configparser = "^5.2.0"
requests = "^2.28.0"
Jinja2 = "^3.1.2"
tweepy = "^4.10.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pylint = "^2.14.2"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[tool.poetry.plugins."console_scripts"]
"jsonfeed2social" = "jsonfeed2social.__main__:launcher"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
